added endpoints for comment entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/blog?useUnicode=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Trikutlace?941
 server.servlet.context-path=/blog
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
